@@ -319,6 +319,7 @@ To be released as 0.11.4.
   hostname
 * bug 712: GnuTLS works on https://www-s.uiuc.edu/[]
 * fix active and passive FTP over IPv6
+* bug 938: elinks -remote no longer needs a controlling tty
 * bug 978: Python's webbrowser.open_new_tab(URL) works since now
 * minor bug 951 in user SMJS: garbage-collect SMJS objects on 'File ->
   Flush all caches' to work around their holding cache entries busy
